fixed major issue of horizontal scroll bar on different screens

--- a/src/components/styles/scss/_education.scss
+++ b/src/components/styles/scss/_education.scss
@@ -3,10 +3,10 @@
 
 #education-area {
   background-color: black;
-  width: 100vw;
+  width: 100%;
   min-height: 100vh;
   #education {
-    width: 100vw;
+    width: 100%;
     min-height: 100vh;
     @include visualWidth;
     color: $color;
