--- a/src/components/styles/scss/_main-page.scss
+++ b/src/components/styles/scss/_main-page.scss
@@ -76,7 +76,7 @@
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  margin: 10rem 0rem 0rem;
+  margin: 1rem 0rem 0rem;
   padding: 2rem 0rem;
   #name-into {
     font-size: 1.5rem;
