--- a/src/components/styles/scss/_star.scss
+++ b/src/components/styles/scss/_star.scss
@@ -1,5 +1,5 @@
 #bg-animation-start {
-  width: 100vw;
+  width: 100%;
 }
 .bg-animation {
   z-index: -5;
